# shamans

./: CMakeLists.txt
raport/: raport.tex
scripts/: run_all.py
src/: LonesomeAdventure.cc  TeamAdventure.cc  adventure.h  mergeSort.h  types.h
src/tests/: CMakeLists.txt  benchmarkBackpack.cpp  benchmarkMax.cpp  benchmarkSort.cpp
